--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Tambahkan judul di sini -->
       <div class="title">
           <h1>EPHunter</h1>
-          <p class="header-subtitle">by SIMGROUP</p>
+          <p class="header-subtitle">The Independent Headhunter</p>
       </div>
 
       <button class="hamburger" id="btn-open-filter" type="button" aria-label="Buka Filter">
