--- a/apply.html
+++ b/apply.html
@@ -11,8 +11,10 @@
     .wrap{max-width:820px;margin:0 auto;padding:24px 14px 60px}
     header{position:sticky;top:0;z-index:10;background:linear-gradient(180deg,#fff .9,#fff .7);backdrop-filter:saturate(140%) blur(6px);border-bottom:1px solid var(--line)}
     .head-inner{max-width:820px;margin:0 auto;padding:14px;display:flex;align-items:center;gap:12px}
-    .logo{width:40px;height:40px;border-radius:12px;background:conic-gradient(from 120deg,#76e4ef,#22d3ee,#0ea5b8,#0891b2,#76e4ef);display:grid;place-items:center;box-shadow:0 6px 20px rgba(0,0,0,.08)}
-    .logo::before{content:"";width:16px;height:16px;border:3px solid #fff;border-radius:50%}
+
+    /* === Updated LOGO styles (use provided image) === */
+    .logo{width:40px;height:40px;border-radius:12px;display:block;box-shadow:0 6px 20px rgba(0,0,0,.08);background:#fff;object-fit:contain;padding:4px}
+
     h1{font-family:'Nunito',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;font-size:22px;line-height:1.15;margin:0;color:var(--brand-ink);letter-spacing:.25px}
     .tag{display:inline-block;margin-left:8px;font:700 11px/1 'Nunito',system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--muted);border:1px solid var(--line);padding:6px 8px;border-radius:999px;color:#0b3d44}
 
@@ -83,8 +85,9 @@
 <body>
   <header>
     <div class="head-inner">
-      <div class="logo" aria-hidden="true"></div>
-      <h1>LOOKERIN <span class="tag">Form Apply</span></h1>
+      <!-- Updated: use provided PNG logo -->
+      <img class="logo" src="https://res.cloudinary.com/dmbpv9edm/image/upload/v1759492113/EP_Hunter_Faticon_Blue_White_zgypxb.png" alt="EPHUNTER logo" loading="eager" width="40" height="40"/>
+      <h1>EPHUNTER <span class="tag">Form Apply</span></h1>
     </div>
   </header>
 
@@ -100,7 +103,7 @@
           method="POST" enctype="multipart/form-data" target="submitFrame" novalidate>
 
       <!-- Hidden fixed/prefill -->
-      <input type="hidden" name="sumber" value="LOOKERIN">
+      <input type="hidden" name="sumber" value="EPHUNTER">
       <input type="hidden" name="minat1" id="minat1">
       <input type="hidden" name="kotaMinat" id="kotaMinat">
       <input type="hidden" name="returnUrl" value="https://ephunter2025.github.io/epjobs/">
