--- a/apply.html
+++ b/apply.html
@@ -243,20 +243,10 @@
           </div>
 
           <div>
-            <label>MINAT POSISI KERJA PERTAMA</label>
+            <label>PEKERJAAN DILAMAR</label>
             <input type="text" id="minat1_view" class="readonly" readonly placeholder="Otomatis dari job yang dipilih">
             <div class="hint">Terisi otomatis dari loker yang Anda klik.</div>
           </div>
-          <div>
-            <label for="minat2">MINAT POSISI KERJA KEDUA</label>
-            <input type="text" id="minat2" name="minat2" placeholder="Opsional">
-          </div>
-
-          <div>
-            <label for="minat3">MINAT POSISI KERJA KETIGA</label>
-            <input type="text" id="minat3" name="minat3" placeholder="Opsional">
-          </div>
-          <div></div>
 
           <div>
             <label for="gajiTerakhir_view" class="req">GAJI TERAKHIR (IDR)</label>
